[lworld] C1 compilation hits assert: Empty inline type access should be removed

XMLWordPrintable

      # assert(vk->nof_nonstatic_fields() > 0) failed: Empty inline type access should be removed

      Current CompileTask:
      C1: 5298 1912 b 3 runtime.valhalla.inlinetypes.EmptyInlineTest$EmptyField::<init> (15 bytes)

      Stack: [0x000070000de18000,0x000070000df18000], sp=0x000070000df16b60, free space=1018k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x1140055] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6d5
      V [libjvm.dylib+0x114078b] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x3b
      V [libjvm.dylib+0x5a2e52] report_vm_error(char const*, int, char const*, char const*, ...)+0x142
      V [libjvm.dylib+0x33c98c] GraphBuilder::copy_inline_content(ciInlineKlass*, Instruction*, int, Instruction*, int, ValueStack*, bool)+0x8c
      V [libjvm.dylib+0x341483] GraphBuilder::withfield(int)+0xbe3
      V [libjvm.dylib+0x3498de] GraphBuilder::iterate_bytecodes_for_block(int)+0x212e
      V [libjvm.dylib+0x34b8bc] GraphBuilder::iterate_all_blocks(bool)+0x7c
      V [libjvm.dylib+0x34d85a] GraphBuilder::GraphBuilder(Compilation*, IRScope*)+0x5fa
      V [libjvm.dylib+0x358b1b] IRScope::IRScope(Compilation*, IRScope*, int, ciMethod*, int, bool)+0x28b
      V [libjvm.dylib+0x359502] IR::IR(Compilation*, ciMethod*, int)+0x82
      V [libjvm.dylib+0x3260ef] Compilation::build_hir()+0xaf
      V [libjvm.dylib+0x327732] Compilation::compile_java_method()+0x182
      V [libjvm.dylib+0x327c38] Compilation::compile_method()+0xb8
      V [libjvm.dylib+0x32802a] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, bool, DirectiveSet*)+0x30a
      V [libjvm.dylib+0x32a5dc] Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x16c
      V [libjvm.dylib+0x5603c8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x608
      V [libjvm.dylib+0x55fb56] CompileBroker::compiler_thread_loop()+0x2e6
      V [libjvm.dylib+0x10a30c4] JavaThread::thread_main_inner()+0x2b4
      V [libjvm.dylib+0x109dfb7] Thread::call_run()+0x1b7
      V [libjvm.dylib+0xe4332f] thread_native_entry(Thread*)+0x15f
      C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
      C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
      C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd

            Assignee:
            Frederic Parain
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: