8253724: [lworld] C1 compilation hits assert: Empty inline type access should be removed

Reviewed-by: thartmann